crux-llvm/test-data/golden/T784-fail.good
[Crux] Found counterexample for verification goal
[Crux]   test-data/golden/T784-fail.c:4:3: error: in main
[Crux]   Call to exit() with non-zero argument
[Crux] Overall status: Invalid.
