crux-llvm/test-data/golden/T784-fail.c
#include <stdlib.h>

int main() {
  exit(1);
  exit(0);
}
